// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SectionBackground /> should render with backgroud dark 1`] = `
.c0 {
  background: #FFFFFF;
  color: #0A1128;
  background: #0A1128;
  color: #FFFFFF;
  min-height: 100vh;
  display: flex;
  align-items: center;
}

.c1 {
  max-width: 120rem;
  margin: 0 auto;
  padding: 3.2rem 8rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <h1>
        Children
      </h1>
    </div>
  </div>
</div>
`;

exports[`<SectionBackground /> should render with backgroud light 1`] = `
.c0 {
  background: #FFFFFF;
  color: #0A1128;
  min-height: 100vh;
  display: flex;
  align-items: center;
}

.c1 {
  max-width: 120rem;
  margin: 0 auto;
  padding: 3.2rem 8rem;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <h1>
      Children
    </h1>
  </div>
</div>
`;

exports[`<SectionBackground /> should render with background dark 1`] = `
.c0 {
  background: #FFFFFF;
  color: #0A1128;
  background: #0A1128;
  color: #FFFFFF;
  min-height: 100vh;
  display: flex;
  align-items: center;
}

.c1 {
  max-width: 120rem;
  margin: 0 auto;
  padding: 3.2rem 8rem;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <h1>
      <h2>
        Children
      </h2>
    </h1>
  </div>
</div>
`;
